added  mother name

--- a/frontend2/index.html
+++ b/frontend2/index.html
@@ -17,6 +17,7 @@
                 <input type="hidden" id="user-id">
                 <input type="text" id="name" placeholder="Name" required>
                 <input type="text" id="fathername" placeholder="Father's Name" required>
+                <input type="text" id="mothername" placeholder="mother's Name" required>
                 <input type="email" id="email" placeholder="Email" required>
                 <input type="text" id="phoneno" placeholder="Phone Number" required>
                 <button type="submit">Create User</button>
@@ -32,6 +33,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="frontend2/src/script.js"></script>
 </body>
 </html>
