added mothername in script.js

--- a/frontend2/index.html
+++ b/frontend2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>User Management</h1>
+        <h1>User Management's</h1>
 
         <!-- Form to Create or Update User -->
         <div class="form-container">
